# agentic_ai_learning

./: README.md  debug code  main.py  owncreate.py  pyproject.toml  requirements.txt
GuardRails/: PII-MIDDLEWARE.py
deep_agents/: 1-basic _deepagent.py
evaluation_llm/: run_evaluation
evaluation_llm.py/: chatbot_evaluation  evaluatiion for rag.py  example.py  own_code.py  run_evaluation
langgraph_learning/: 1-langgraph_chatbot  adding_ memory  chatbot_wit_tools  human_in_the_loop  reactagent_architecture
llm_gateways/: LITELLM
updated_langchaiin/: 1-langchain  2-langchain  3-tools  4-middleware  batch  pydentic  stream
