[project]
name = "langchain-deep-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.11",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-huggingface>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "tavily-python>=0.7.26",
]
